--- a/subsubsection_A_working_example_For__.tex
+++ b/subsubsection_A_working_example_For__.tex
@@ -97,7 +97,7 @@ and \  H(z) = \lim_{k \to \infty} \left(\frac{1}{2} + \frac{1}{2}tanh(kz) \right
 The logistic function has the advantages of being smooth, well defined for all real numbers and its image is $(0,1)$. This property lends itself to reading outputs as probabilities of targets belonging to a certain class. The derivative of this function can be put in terms of the function itself, where
 
 \begin{equation} \label{eq:derivativeLogisticFunction}
-\frac{\partial \sigma(a)}{\partial a}  = \sigma(a)( 1 - \sigma(a) )    
+ \sigma '(a) = \sigma(a)( 1 - \sigma(a) )    
 \end{equation}
 
 The logistic function is also bijective, with the inverse given by the \textit{logit} function 
